Archive2/d1/3889f16886bb20/output
main.cpp:32:1: error: expected expression
template<typename T,typename S>
^
main.cpp:70:2: error: expected '}'
}
 ^
main.cpp:12:46: note: to match this '{'
Map3 foo( Map1 const & m1, Map2 const & m2 ) {
                                             ^
2 errors generated.
